# ChangeLog for net-im/kadu-dcc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> -kadu-dcc-0.6.0.2.ebuild,
  +kadu-dcc-0.6.0.3.ebuild:
  Bumped. Removed previous version.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-dcc-0.6.5_rc2.ebuild,
  +kadu-dcc-0.6.5.ebuild:
  Bumped. Removed previous version.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-dcc-0.6.5_rc2.ebuild:
  Bumped.

  07 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-dcc-0.6.0.1.ebuild:
  Removed cruft.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-dcc-0.6.0.2.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-dcc-0.6.0.ebuild:
  Removed cruft.

  05 May 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-dcc-0.6.0.1.ebuild:
  Bumped.
