@@ -1,5 +1,6 @@
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-dcc-0.6.0.3.ebuild 267 RMD160 4739233d0560bf3e396573dfff5de47747faa0e9 SHA1 f9566afc469e0fac644e0bcdc91347cd5ffb6275 SHA256 328167dd95fdaa546169bf2f35e9a307cecafcc38e0224f1face507cf73274fa
-EBUILD kadu-dcc-0.6.5.ebuild 167 RMD160 ab04be8008879f5b4ba6b760bca0236c524e8466 SHA1 a0c100d231369e7d0f8d7f228429551889ff11b3 SHA256 be4d6e57ec907f92b4fcd7fad22fbb5384865070cdd15aea581f70d86e945915
-MISC ChangeLog 840 RMD160 5fb4cd3e21d689b8663ac9a424dc934e059d714e SHA1 4d8b25e662033af89a98b3969ee036b3ae68ec20 SHA256 bc2435895447dc0d26b4ca9b2a4dfa6d0c5c1318006900c13a83884caa45518d
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-dcc-0.6.0.3.ebuild 397 RMD160 efe52b6ac4f5398076d1eff44010b2781362b4fb SHA1 84dddeee54bc627800dd544cd8013d2492b530b8 SHA256 39bee699d3fd36bd02c355a58e1a331d72ceeff1ed6c27055ba09ef29c39a5da
+EBUILD kadu-dcc-0.6.5.1.ebuild 261 RMD160 7e04e45b025b04d357a597ace7823b768c9689f6 SHA1 660030a2504badd2d961988e4a3bf9b4beb9d4c6 SHA256 be694ec1105425d6e3ce17ea0d280a0b41e3bd54b1145404ebe771bdabfcb853
+MISC ChangeLog 1038 RMD160 abd7323becdaa6ea2f97796d3eb006a4b147244c SHA1 49bdcdd081163e4dc1f03470ece984375cfafde7 SHA256 63e0e513de1d179617ea0ee6d2355262bf250021f85bc5ecf1737cf42de226b3
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
