@@ -1,6 +1,10 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
 inherit kadu
 
-MOD_DEPEND="~net-im/kadu-notify-${MIN_REQ}"
+MOD_DEPEND=">=net-im/kadu-notify-${MIN_REQ}"
 
 inherit kadu-module
 
@@ -8,3 +12,4 @@ SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
 DESCRIPTION="Kadu module that provides peer-to-peer connection support"
 HOMEPAGE="http://kadu.net"
 KEYWORDS="amd64 x86"
+IUSE=""
